--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "http-errors": "~1.6.3",
     "mongoose": "^7.0.4",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.9.1",
     "nodemon": "^2.0.22"
   }
 }
